Update code to use Java 14 features